2009-04-02  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Resources/banshee-dialogs.glade: Improve
	language for smart playlists predefined button.

2009-04-02  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs:
	Fixed row rendering glitch when hscroll position is non-zero
	(BGO #548526)

2009-04-02  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ColumnCellRating.cs:
	* src/Libraries/Hyena.Gui/Hyena.Gui/RatingRenderer.cs:
	* src/Libraries/Hyena.Gui/Hyena.Widgets/RatingEntry.cs: Changed the
	RatingEntry widget to make it easier to edit and reset the ratings
	(BGO #572260)

2009-04-02  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Core/Banshee.Streaming/StreamTagger.cs: Patch from
	Alexander Kojevnikov working around issue in TagLib# where it
	miscalculates the bitrate for VBR tracks if the duration isn't set
	yet (BGO #562582)

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs:
	Bump the metadata version to trigger a refresh.  Users of trunk will get
	yet another refresh, where users coming from 1.4 won't see a difference;
	they already were going to get a refresh.

2009-04-02  Gabriel Burt  <gabriel.burt@gmail.com>

	Updated to latest MusicBrainz# courtesy of Scott Peterson and Tom Corner.

	* src/Extensions/Banshee.AudioCd/Banshee.AudioCd/AudioCdDiscModel.cs:
	Use the new MB# API.

	* src/Libraries/MusicBrainz/*: Updated to latest from musicbrainz.org.  I
	did comment out the DiscWin32NT references in LocalDisc.

2009-04-02  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.Ipod/Banshee.Dap.Ipod/IpodTrackInfo.cs: Patch from
	Andrés G. Aragoneses fixing bug with ratings not getting transferred to
	iPods (BGO #577396)

2009-04-01  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/DefaultColumnController.cs: 